--- a/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
+++ b/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
@@ -1313,19 +1313,16 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="U66-QH-L2q" userLabel="Consoles">
-                                        <rect key="frame" x="35" y="80" width="305" height="60"/>
+                                        <rect key="frame" x="35" y="106" width="305" height="34"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Et1-3f-d7y" userLabel="Xbox">
-                                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
-                                                <state key="normal" backgroundImage="xbox"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="30" height="34"/>
                                             </button>
                                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N31-2q-Qy1" userLabel="Playstation">
-                                                <rect key="frame" x="123.5" y="0.0" width="58" height="60"/>
-                                                <state key="normal" image="playstation"/>
+                                                <rect key="frame" x="137.5" y="0.0" width="30" height="34"/>
                                             </button>
                                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1an-zP-2Qu" userLabel="PC">
-                                                <rect key="frame" x="245" y="0.0" width="60" height="60"/>
-                                                <state key="normal" image="pc"/>
+                                                <rect key="frame" x="275" y="0.0" width="30" height="34"/>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -1567,6 +1564,7 @@
         <image name="xbox" width="60" height="60"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="9iT-u1-uYN"/>
         <segue reference="dSy-8B-ZhX"/>
     </inferredMetricsTieBreakers>
 </document>
