--- a/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
+++ b/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
@@ -171,8 +171,11 @@
                                         <rect key="frame" x="79" y="82.5" width="217" height="31.5"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MDT-C3-hmh" userLabel="Add Photot Button">
-                                        <rect key="frame" x="132.5" y="164" width="110" height="100"/>
-                                        <state key="normal" backgroundImage="AddPhotoBtn"/>
+                                        <rect key="frame" x="137.5" y="164" width="100" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="MDT-C3-hmh" secondAttribute="height" multiplier="1:1" id="sGK-X8-zoE"/>
+                                        </constraints>
+                                        <state key="normal" image="AddPhotoBtn"/>
                                         <connections>
                                             <action selector="addPhotoBtnPressed:" destination="48r-iv-jYN" eventType="touchUpInside" id="ZKu-Ou-2aA"/>
                                         </connections>
