--- a/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
+++ b/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Kvm-p2-dI0">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -1526,10 +1526,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="gameSelectionBG" translatesAutoresizingMaskIntoConstraints="NO" id="6ED-gM-llf">
+                            <imageView userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gameSelectionBG" translatesAutoresizingMaskIntoConstraints="NO" id="6ED-gM-llf">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tHb-2W-z4B">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="GCJ-BC-grI">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lSz-KX-1Zx">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="qKT-oY-7rW">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            </view>
+                                            <vibrancyEffect>
+                                                <blurEffect style="light"/>
+                                            </vibrancyEffect>
+                                        </visualEffectView>
+                                    </subviews>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MjK-BN-s3M" userLabel="Top Container">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="148"/>
                                 <subviews>
@@ -1664,18 +1684,26 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="MjK-BN-s3M" firstAttribute="top" secondItem="NN9-4Y-ebb" secondAttribute="top" id="0dp-L3-mRW"/>
+                            <constraint firstItem="N2e-22-co4" firstAttribute="trailing" secondItem="tHb-2W-z4B" secondAttribute="trailing" id="1R5-Kf-loD"/>
                             <constraint firstItem="TxQ-yi-4Jo" firstAttribute="top" secondItem="fF9-Mk-lvF" secondAttribute="bottom" id="1kA-7o-PWU"/>
                             <constraint firstItem="N2e-22-co4" firstAttribute="bottom" secondItem="TxQ-yi-4Jo" secondAttribute="bottom" id="2Fb-NK-69a"/>
                             <constraint firstItem="MjK-BN-s3M" firstAttribute="height" secondItem="NN9-4Y-ebb" secondAttribute="height" multiplier="0.222" id="4fZ-Mk-kat"/>
+                            <constraint firstItem="6ED-gM-llf" firstAttribute="top" secondItem="NN9-4Y-ebb" secondAttribute="top" id="6ic-zn-Ah1"/>
                             <constraint firstItem="fF9-Mk-lvF" firstAttribute="trailing" secondItem="N2e-22-co4" secondAttribute="trailing" id="DCx-Id-EPg"/>
                             <constraint firstItem="TxQ-yi-4Jo" firstAttribute="trailing" secondItem="N2e-22-co4" secondAttribute="trailing" id="El1-80-fDy"/>
                             <constraint firstItem="MjK-BN-s3M" firstAttribute="trailing" secondItem="N2e-22-co4" secondAttribute="trailing" id="Ivw-jw-W4i"/>
+                            <constraint firstItem="N2e-22-co4" firstAttribute="bottom" secondItem="tHb-2W-z4B" secondAttribute="bottom" id="Lw9-Cf-wp2"/>
                             <constraint firstItem="fF9-Mk-lvF" firstAttribute="height" secondItem="NN9-4Y-ebb" secondAttribute="height" multiplier="0.37" id="OCY-3j-KvQ"/>
+                            <constraint firstItem="tHb-2W-z4B" firstAttribute="leading" secondItem="N2e-22-co4" secondAttribute="leading" id="Ogq-X0-vpa"/>
+                            <constraint firstItem="6ED-gM-llf" firstAttribute="bottom" secondItem="N2e-22-co4" secondAttribute="bottom" id="SHA-dN-Abp"/>
                             <constraint firstItem="fF9-Mk-lvF" firstAttribute="leading" secondItem="N2e-22-co4" secondAttribute="leading" id="U2b-Zg-MpS"/>
                             <constraint firstItem="fF9-Mk-lvF" firstAttribute="top" secondItem="MjK-BN-s3M" secondAttribute="bottom" id="UGs-6H-qBE"/>
                             <constraint firstItem="MjK-BN-s3M" firstAttribute="leading" secondItem="N2e-22-co4" secondAttribute="leading" id="V3e-HM-C7s"/>
                             <constraint firstItem="TxQ-yi-4Jo" firstAttribute="leading" secondItem="N2e-22-co4" secondAttribute="leading" id="hUe-RF-sBI"/>
                             <constraint firstItem="U66-QH-L2q" firstAttribute="centerX" secondItem="N2e-22-co4" secondAttribute="centerX" id="qy1-9l-oFS"/>
+                            <constraint firstItem="tHb-2W-z4B" firstAttribute="top" secondItem="NN9-4Y-ebb" secondAttribute="top" id="rfN-cV-z0X"/>
+                            <constraint firstItem="6ED-gM-llf" firstAttribute="leading" secondItem="N2e-22-co4" secondAttribute="leading" id="uVq-t0-FjB"/>
+                            <constraint firstItem="6ED-gM-llf" firstAttribute="trailing" secondItem="N2e-22-co4" secondAttribute="trailing" id="yAD-FT-cG0"/>
                             <constraint firstItem="r9v-Sf-iEu" firstAttribute="centerX" secondItem="N2e-22-co4" secondAttribute="centerX" id="yKQ-bq-J06"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="N2e-22-co4"/>
@@ -1687,6 +1715,7 @@
                         <outlet property="removePopupBtn" destination="0OP-Hh-xm2" id="HQJ-G7-0jY"/>
                         <outlet property="submitBtn" destination="BWB-P3-hvh" id="Jks-e9-5cn"/>
                         <outlet property="tableView" destination="0S5-7r-RWv" id="NeY-t4-WUB"/>
+                        <outlet property="visualEffectView" destination="tHb-2W-z4B" id="E3K-qQ-y4B"/>
                         <outletCollection property="consoleBtns" destination="Et1-3f-d7y" collectionClass="NSMutableArray" id="UKl-o1-eyP"/>
                         <outletCollection property="consoleBtns" destination="N31-2q-Qy1" collectionClass="NSMutableArray" id="55d-fx-bew"/>
                         <outletCollection property="consoleBtns" destination="1an-zP-2Qu" collectionClass="NSMutableArray" id="49C-IW-LA9"/>
@@ -1809,6 +1838,6 @@
         <image name="xbox" width="60" height="60"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="p1K-8C-PN8"/>
+        <segue reference="SZl-6X-ud1"/>
     </inferredMetricsTieBreakers>
 </document>
